# java-backend

./: .gitignore  .pre-commit-config.yaml  Makefile  api.py  docker-compose.yml  generate_test_data.py  init.sql  model.uxf  pyproject.toml
database/: init.sql
server/: pom.xml
server/src/main/java/server/: RestApiApplication.java
server/src/main/java/server/config/: CorsConfig.java
server/src/main/java/server/controller/: AuthController.java  ListingController.java  QuoteController.java  RatingController.java  UserController.java
server/src/main/java/server/filter/: RequestResponseLoggingFilter.java
server/src/main/java/server/middleware/: Request.java  RowMappers.java
server/src/main/java/server/models/: Listing.java  Quote.java  Rating.java  User.java
server/src/main/java/server/service/: ListingService.java  QuoteService.java  RatingService.java  UserService.java
server/src/main/java/server/utils/: Response.java
server/src/main/resources/: application.properties  logback-spring.xml
tests/: test_api.py
