[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = "Data Ingestion Layer for Green Gravity."
authors = ["Jacob Brown"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.2.3,<3.0.0"
sqlalchemy = "^2.0.41"
openpyxl = "^3.1.5"
psycopg2-binary = "^2.9.10"
flask = "^3.1.1"
flask-cors = "^6.0.0"
faker = "^37.3.0"
click = "^8.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
commitizen = "^4.6.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"